# Knots-v2

./: .gitignore  README.md  main.py  output.json  pyproject.toml  scratch.py
knots_v2/: __init__.py  gui.py
knots_v2/compute/: __init__.py  contact_graph.py  convex_hull.py  dubins.py  envelope.py
knots_v2/domain/: __init__.py  base.py  configuration.py  disk.py  primitives.py
knots_v2/orchestration/: __init__.py  cache.py  census.py  events.py  scheduler.py
knots_v2/output/: __init__.py  cli.py  notebook.py  serializer.py  svg_exporter.py
knots_v2/plugins/: __init__.py  base_plugin.py
tests/: __init__.py  conftest.py  test_compute.py  test_domain.py  test_orchestration.py
