[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knots-v2"
version = "0.1.0"
description = "Plataforma de análisis geométrico de configuraciones de discos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["geometry", "disks", "convex-hull", "dubins", "contact-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# Dependencias mínimas: sin scipy ni numpy.
# La geometría se implementa desde cero para mantener el proyecto liviano.
dependencies = [
    "typer>=0.9.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
knots = "knots_v2.output.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["knots_v2"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["knots_v2"]
